crates/rome_formatter/tests/specs/prettier/js/ternaries/binary.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: binary.js

---
# Input
```js
const funnelSnapshotCard = (report === MY_OVERVIEW &&
  !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics)
  ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  : null;

room = room.map((row, rowIndex) => (
  row.map((col, colIndex) => (
    (rowIndex === 0 || colIndex === 0 || rowIndex === height || colIndex === width) ? 1 : 0
  ))
))

```

# Output
```js
const funnelSnapshotCard = (
  report === MY_OVERVIEW && !ReportGK.xar_metrics_active_capitol_v2
) || (
  report === COMPANY_OVERVIEW && !ReportGK.xar_metrics_active_capitol_v2_company_metrics
) ? <ReportMetricsFunnelSnapshotCard metrics={metrics} /> : null;

room =
  room.map(
    (row, rowIndex) => (
      row.map(
        (col, colIndex) => (
          (
            rowIndex === 0 ||
              colIndex === 0 ||
              rowIndex === height ||
              colIndex === width
          ) ? 1 : 0
        ),
      )
    ),
  );

```

# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
  ┌─ binary.js:5:5
  │
5 │   ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax


```


